sass/components/content/_info-page-view.scss
.info-view-video-container {
  display: inline-block;
  position: relative;
  margin-top: 10px;
  video {
    width: 100%;
    max-width: 512px;
    max-height: 384px;
  }
}

.infoMediaContainer {
  text-align: center;
}

.listItem {
  list-style: list-item;
}

.info-container {
  border-style: solid;
  border-width: 1px;
  border-color: $border-color;
  margin: 10px;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 20px;
}

/*.info-view-list-item {margin-top: -20px;}*/


.info-bullets-indent {
  margin-left: 25px;
}


.info-view-bullet-item:before {
  content: "\2022  ";
  color: #000;
}

.infoMediaContainer{
  margin: 0 auto;
  margin-bottom: 0px;
  margin-top: 0px;
  img {
    width: 100%;
    max-height: 320px;
    max-width: 447px;
  }
}

.image-caption-container {
  margin-top: 10px;
  margin-bottom: 15px;
  border-style: solid;
  border-color: $caption-bg-color;
  border-width: 1px;
  img: {
    width: 100%;

  }
  .caption {
    width: 100%;
  }
}

@media screen and (max-width: 767px){
  .image-caption-container {
    width: 95%;
    img: {
      width: 100%;
    }
    .caption {
      width: 100%;
    }
  }

  .infoMediaContainer{
    margin-top: 20px;
    img {
      width: 100%;
    }
    .caption {
      width: 100%;
      vertical-align: middle;
    }
  }

  .infoNoteContainer {
    position: relative;
    width: 95%;
    ul {
      padding-left: 0px;
    }

  }

}

.infoNoteContainer{
  margin: 0 auto;
  margin-top: 20px;
  text-align: left;
  position: relative;
  p {
    font-size: 18px;
    font-weight: 300;
    white-space: pre-line;
  }
}

.infoDataContainer{
  text-align: center;
}

.infoAttributions{
  pointer-events: all;
  font-size: 16px;
  color: $nav-button-color;
}

.fullcoach {
  video {
    width:100%;
    max-height: 350px;
  }
}
.info-video-player {
  margin-top: 10px;
}
.info-video-player::-webkit-media-controls-play-button, .info-video-player::-webkit-media-controls-volume-slider,
.info-video-player::-webkit-media-controls-mute-button, .info-video-player::-webkit-media-controls-timeline,
.info-video-player::-webkit-media-controls-fullscreen-button {
  cursor: pointer;
}

